@@ -11,7 +11,11 @@ Gem::Specification.new do |s|
   s.summary = "A ripl plugin for multi-line eval."
   s.description =  "This ripl plugin allows you to evaluate multiple lines of Ruby code."
   s.required_rubygems_version = ">= 1.3.6"
-  s.add_dependency 'ripl', '>= 0.3.2'
+  s.add_dependency 'ripl', '>= 0.3.6'
+  s.add_development_dependency 'bacon', '>= 1.1.0'
+  s.add_development_dependency 'bacon-bits'
+  s.add_development_dependency 'bacon-rr'
+  s.add_development_dependency 'rr'
   s.files = Dir.glob(%w[{lib,test}/**/*.rb bin/* [A-Z]*.{txt,rdoc} ext/**/*.{rb,c} **/deps.rip]) + %w{Rakefile .gemspec}
   s.extra_rdoc_files = ["README.rdoc", "LICENSE.txt"]
   s.license = 'MIT'
